# lp_generator

./: Cargo.toml  Makefile  README.org
src/: kdg.rs  main.rs  resource.rs
