[package]
name = "lp_generator"
version = "0.1.0"
authors = ["Hari Amoor <amoor.hari@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.14"
serde = { version = "1.0.106", features = ["derive"] }
serde-xml-rs = "0.4.0"
